# emc_aims

./: README.md  pyproject.toml
emc_aims/: aims_utils.py
examples/inputs/GaAs_heavy_hole/: INPCAR  aims.json
examples/inputs/GaAs_light_hole/: INPCAR
examples/inputs/GaAs_splitoff_hole/: INPCAR
examples/inputs/PENCEN06/: PENCEN06.cif
examples/inputs/PENCEN06_pbe0/: INPCAR  convert_cif_to_aims.py
examples/outputs/GaAs_electron/: INPCAR  band1003.out  band1005.out  band1006.out  band1008.out.no_soc  band1010.out.no_soc  band1012.out.no_soc  band1019.out  band1019.out.no_soc  emc_aims.out  geometry.in  run.sh
examples/outputs/GaAs_electron_small_cell/: INPCAR  aims.out  band1001.out  band1001.out.no_soc  band1002.out  band1002.out.no_soc  band1003.out  band1003.out.no_soc  band1004.out  band1004.out.no_soc  band1005.out  band1005.out.no_soc  band1006.out  band1006.out.no_soc  band1007.out  band1007.out.no_soc  band1008.out  band1008.out.no_soc  band1009.out  band1009.out.no_soc  band1010.out  band1010.out.no_soc  band1011.out  band1011.out.no_soc  band1012.out  band1012.out.no_soc  band1013.out  band1013.out.no_soc  band1014.out  band1014.out.no_soc  band1015.out  band1015.out.no_soc  band1016.out  band1016.out.no_soc  band1017.out  band1017.out.no_soc  band1018.out  band1018.out.no_soc  band1019.out  band1019.out.no_soc  (+3 more)
examples/outputs/GaAs_heavy_hole/: aims.out  band1002.out.no_soc  band1003.out.no_soc  band1005.out.no_soc  band1007.out.no_soc  band1008.out  band1009.out  band1011.out.no_soc  band1013.out.no_soc  band1015.out.no_soc  band1018.out.no_soc  (+2 more)
(+71 files in other folders)
